first commit: assignment 1

--- a/_layouts/home-mathjax.html
+++ b/_layouts/home-mathjax.html
@@ -2,5 +2,9 @@
 layout: home
 ---
 
-{% include mathjax.html %}
+<!-- MathJax (manually added) -->
+<script type="text/javascript" async
+  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+</script>
+
 {{ content }}
